<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity"
    android:background="@color/background">

    <include
        android:id="@+id/tool_bar"
        layout="@layout/tool_bar"
        ></include>

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_title"
        android:id="@+id/textView"
        android:layout_marginTop="89dp"
        android:textSize="30dp"
        android:textColor="#ffff00"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_p1"
        android:id="@+id/textView2"
        android:layout_marginTop="42dp"
        android:paddingLeft="30dp"
        android:textSize="15dp"
        android:textColor="#ffff00"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_p3"
        android:id="@+id/textView4"
        android:textSize="15dp"
        android:textColor="#ffff00"
        android:paddingLeft="30dp"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_email"
        android:textColor="#ffff00"
        android:layout_marginTop="40dp"
        android:paddingLeft="30dp"
        android:textSize="15dp"
        android:layout_below="@+id/textView4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/textView6" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_location"
        android:id="@+id/textView5"
        android:layout_below="@+id/textView6"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingLeft="30dp"
        android:textColor="#ffff00"/>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageButton"
        android:layout_alignParentBottom="true"

        android:layout_marginBottom="54dp"
        android:src="@drawable/ul_map"
        android:layout_marginTop="60dp"
        android:layout_below="@id/textView6"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"/>


</RelativeLayout>
</RelativeLayout>